Fixed z-index

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -110,7 +110,7 @@ a {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 9997;
+    z-index: 997;
     height: 70px;
     width: 100%;
     display: -ms-flexbox;
